# cellular

./: .gitignore  CLAUDE.md  METRICS_README.md  README.md  TODO.md  VISUALIZATION_README.md  bulk_simulation_example.py  cli_examples.py  example.py  pyproject.toml  search_examples.py  tox.ini
src/cellular/: __init__.py
src/cellular/core/: __init__.py  batch_game.py  batch_grid.py  bulk_runner.py  game.py  grid.py  metrics.py  patterns.py
src/cellular/frontends/: __init__.py  cli.py  tkinter_gui.py
tests/: test_basic.py
tests/core/: test_game.py  test_grid.py  test_patterns.py
tests/frontends/: test_cli.py  test_cli_search.py  test_tkinter_gui.py
